@@ -483,6 +483,9 @@ Release 2.1.0-beta - 2013-07-02
     YARN-927. Change ContainerRequest to not have more than 1 container count
     and remove StoreContainerRequest (bikas)
 
+    YARN-922. Change FileSystemRMStateStore to use directories (Jian He via
+    bikas)
+
   OPTIMIZATIONS
 
     YARN-512. Log aggregation root directory check is more expensive than it
